--- a/build.gradle
+++ b/build.gradle
@@ -1,48 +1,50 @@
 plugins {
-    id 'groovy'
     id 'java'
-    id 'org.jetbrains.intellij' version '0.3.4'
-    id 'application'
-    id 'war'
+    id 'org.akhikhl.gretty' version "1.2.4"
 }
-
-mainClassName = 'com.company.sailorsmarketplace.Launcher'
 
 group 'sailors.marketplace'
 version '1.0-SNAPSHOT'
-
-sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
+ext {
+    jettyVersion = "9.4.11.v20180605"
+    jerseyVersion = "2.27"
+}
+
 dependencies {
+    compile "javax.xml.bind:jaxb-api:2.3.0"
+    compile "javax.activation:activation:1.1.1"
     compile 'org.codehaus.groovy:groovy-all:2.3.11'
-    compile group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '2.27'
-    compile group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet', version: '2.27'
-    compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-webapp', version: '8.2.0.v20160908'
-//    compile group: 'org.eclipse.jetty', name: 'jetty-webapp', version: '9.4.11.v20180605'
-    compile group: 'org.eclipse.jetty', name: 'jetty-http', version: '9.4.11.v20180605'
-    compile group: 'org.eclipse.jetty', name: 'jetty-annotations', version: '9.4.11.v20180605'
-    compile group: 'org.eclipse.jetty', name: 'jetty-deploy', version: '9.4.11.v20180605'
-    compile group: 'org.eclipse.jetty.aggregate', name: 'jetty-servlet', version: '8.2.0.v20160908'
-    testCompile group: 'org.eclipse.jetty.aggregate', name: 'jetty-server', version: '8.2.0.v20160908'
+    compile "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
+
+    compile "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
+    compile "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
+    compile "org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}"
+    compile "org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}"
+    compile "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
+    compile "org.eclipse.jetty:jetty-http:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-annotations:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-deploy:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-io:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-util:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
+    compile "org.eclipse.jetty:apache-jsp:${jettyVersion}"
+
+    compile group: 'org.mortbay.jetty', name: 'jsp-2.1', version: '6.1.14'
+
     compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    compile group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.2-b02'
 
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    compile group: 'javax.servlet', name: 'jstl', version: '1.2'
     compile group: 'javax.el', name: 'javax.el-api', version: '3.0.1-b06'
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-}
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
+    compile 'ch.qos.logback:logback-classic:1.0.13'
 
-intellij {
-    version '2018.1.5'
-}
-patchPluginXml {
-    changeNotes """
-      Add change notes here.<br>
-      <em>most HTML tags may be used</em>"""
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
