--- a/build.gradle
+++ b/build.gradle
@@ -36,12 +36,14 @@ dependencies {
     compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
     compile "org.eclipse.jetty:apache-jsp:${jettyVersion}"
 
-// https://mvnrepository.com/artifact/com.google.inject/guice
+    compile "org.ow2.asm:asm:6.2"
     compile group: 'com.google.inject', name: 'guice', version: '4.2.0'
 
-    compile "org.hibernate:hibernate-core:5.3.5.Final"
-    compile "org.hibernate.validator:hibernate-validator:6.0.12.Final"
-    compile "mysql:mysql-connector-java:8.0.12"
+    compile "org.hibernate:hibernate-core:5.2.6.Final"
+    compile "com.sun.xml.bind:jaxb-core:2.3.0"
+    compile "com.sun.xml.bind:jaxb-impl:2.3.0"
+//    compile "org.hibernate.validator:hibernate-validator:6.0.12.Final"
+    compile "mysql:mysql-connector-java:5.0.8"
 
 
     compile group: 'org.mortbay.jetty', name: 'jsp-2.1', version: '6.1.14'
