--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile "mysql:mysql-connector-java:8.0.12"
 
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
 
     compile group: 'org.mortbay.jetty', name: 'jsp-2.1', version: '6.1.14'
 
@@ -55,6 +56,8 @@ dependencies {
 
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile 'ch.qos.logback:logback-classic:1.0.13'
+
+    compile "org.passay:passay:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
