--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile 'ch.qos.logback:logback-classic:1.0.13'
 
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.412'
+
     compile "org.passay:passay:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
