--- a/build.gradle
+++ b/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     compile "org.passay:passay:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/com.carlosbecker/guice-junit-test-runner
+    compile group: 'com.carlosbecker', name: 'guice-junit-test-runner', version: '1.1'
 }
