--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 .gitignore
 .gradle/
 
@@ -11,3 +10,6 @@ out/
 *.ear
 *.tar.gz
 *.rar
+/src/main/resources/css/
+/src/main/resources/js/
+/src/main/resources/static-root/
