--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,35 @@
-plugins {
-    id 'java'
-    id 'org.akhikhl.gretty' version "1.2.4"
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.1'
+    }
 }
 
-group 'sailors.marketplace'
+apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'java'
+
+group 'com.company.sailorsmarketplace'
 version '1.0-SNAPSHOT'
+
+jar {
+    manifest {
+        attributes 'Main-Class': '/libs/a.jar'
+    }
+}
 
 repositories {
     mavenCentral()
 }
+
+//jar {
+//    manifest {
+//        attributes(
+//                'Main-Class': 'com.company.sailorsmarketplace.Launcher'
+//        )
+//    }
+//}
 
 ext {
     jettyVersion = "9.4.11.v20180605"
@@ -16,50 +37,52 @@ ext {
 }
 
 dependencies {
-    compile "javax.xml.bind:jaxb-api:2.3.0"
-    compile "javax.activation:activation:1.1.1"
+//    compile "javax.xml.bind:jaxb-api:2.3.0"
+//    compile "javax.activation:activation:1.1.1"
     compile "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
 
     compile "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
-    compile "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
-    compile "org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}"
-    compile "org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}"
+    compile("org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}") {
+        exclude group: "com.fasterxml.jackson.core", module: "jackson-annotations"
+    }
+    compile("com.fasterxml.jackson.core:jackson-annotations:2.8.10")
+    compile("org.glassfish.jersey.ext:jersey-bean-validation:${jerseyVersion}") {
+        exclude group: "org.jboss.logging", module: "jboss-logging"
+        exclude group: "com.fasterxml", module: "classmate"
+    }
+    compile("org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}") {
+        exclude group: "org.eclipse.jetty", module: "jetty-server"
+        exclude group: "org.eclipse.jetty", module: "jetty-util"
+    }
     compile "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
-    compile "org.eclipse.jetty:jetty-http:${jettyVersion}"
-    compile "org.eclipse.jetty:jetty-annotations:${jettyVersion}"
-    compile "org.eclipse.jetty:jetty-deploy:${jettyVersion}"
-    compile "org.eclipse.jetty:jetty-io:${jettyVersion}"
-    compile "org.eclipse.jetty:jetty-server:${jettyVersion}"
     compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
-    compile "org.eclipse.jetty:jetty-util:${jettyVersion}"
-    compile "org.eclipse.jetty:jetty-webapp:${jettyVersion}"
+
+    compile 'javax.xml.bind:jaxb-api:2.3.0'
+    compile 'com.sun.xml.bind:jaxb-core:2.3.0'
+    compile 'com.sun.xml.bind:jaxb-impl:2.3.0'
+    compile 'javax.activation:activation:1.1.1'
 
     compile "org.ow2.asm:asm:6.2"
     compile group: 'com.google.inject', name: 'guice', version: '4.2.0'
 
-    compile "org.hibernate:hibernate-core:5.2.6.Final"
-    compile "com.sun.xml.bind:jaxb-core:2.3.0"
-    compile "com.sun.xml.bind:jaxb-impl:2.3.0"
-//    compile "org.hibernate.validator:hibernate-validator:6.0.12.Final"
+    compile("org.hibernate:hibernate-core:5.2.6.Final") {
+        exclude group: "org.javassist", module: "javassist"
+    }
     compile "mysql:mysql-connector-java:8.0.12"
 
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.6'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8'
 
-    compile group: 'org.mortbay.jetty', name: 'jsp-2.1', version: '6.1.14'
-
-    compile group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    compile group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
-    compile group: 'javax.el', name: 'javax.el-api', version: '3.0.1-b06'
-
-    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile 'ch.qos.logback:logback-classic:1.0.13'
 
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.412'
+   // compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.412'
 
     compile "org.passay:passay:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     // https://mvnrepository.com/artifact/com.carlosbecker/guice-junit-test-runner
-    compile group: 'com.carlosbecker', name: 'guice-junit-test-runner', version: '1.1'
+    compile('com.carlosbecker:guice-junit-test-runner:1.1') {
+        exclude group: "com.google.inject"
+    }
 }
+
