--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     }
     compile "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
     compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-util:${jettyVersion}"
 
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     compile 'com.sun.xml.bind:jaxb-core:2.3.0'
@@ -79,6 +80,8 @@ dependencies {
     compile "org.passay:passay:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+
     compile('com.carlosbecker:guice-junit-test-runner:1.1') {
         exclude group: "com.google.inject"
     }
