--- a/build.gradle
+++ b/build.gradle
@@ -36,8 +36,6 @@ ext {
 }
 
 dependencies {
-//    compile "javax.xml.bind:jaxb-api:2.3.0"
-//    compile "javax.activation:activation:1.1.1"
     compile "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
     compile("org.glassfish.jersey.ext:jersey-entity-filtering:${jacksonVersion}")
 
@@ -61,6 +59,7 @@ dependencies {
     }
     compile "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
     compile "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+    compile "org.eclipse.jetty:jetty-util:${jettyVersion}"
 
     compile 'javax.xml.bind:jaxb-api:2.3.0'
     compile 'com.sun.xml.bind:jaxb-core:2.3.0'
@@ -80,12 +79,11 @@ dependencies {
 
     compile 'ch.qos.logback:logback-classic:1.0.13'
 
-    // compile group: 'com.amazonaws', name: 'aws-java-sdk-ses', version: '1.11.412'
-
     compile "org.passay:passay:1.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/com.carlosbecker/guice-junit-test-runner
+    testCompile group: 'com.h2database', name: 'h2', version: '1.4.197'
+
     compile('com.carlosbecker:guice-junit-test-runner:1.1') {
         exclude group: "com.google.inject"
     }
